--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,3 +1,17 @@
 {
-  "presets": ["env","react"]
+  "presets": [
+    "env",
+    "react"
+  ],
+  "plugins": [
+    [
+      "import",// 按需引入antd 组件和css
+      {
+        "libraryName": "antd",
+        "libraryDirectory": "lib",
+        "style": true  //是否解析antd less
+      }
+    ],
+    ["transform-class-properties"]//属性初始化器语法
+  ]
 }
