--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-quill": "^1.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-zmage": "^0.4.0",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0"
   },
@@ -44,6 +45,7 @@
     "mockjs": "^1.0.1-beta3",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.0",
+    "url-loader": "^1.1.2",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.7"
