--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,5 +1,7 @@
 {
   "presets": [
+    ["es2015", { "modules": false }],//recat-zmage
+    "stage-0",//react-zmage
     "env",
     "react"
   ],
@@ -14,6 +16,6 @@
     ],
     ["transform-class-properties"],//属性初始化器语法
     ["transform-object-rest-spread"],// ...操作符
-    [ "add-module-exports"]
+    [ "add-module-exports"]//react-zmage
   ]
 }
